--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
     default: ${{ github.token }}
   repo:
     required: true
-    default: ${{ github.github.repository }}
+    default: ${{ github.repository }}
   sha:
     required: true
     default: ${{ github.ref }}
