:rotating_light: Suppress eslint-plugin-github warning

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,3 +3,6 @@ extends:
   - plugin:@typescript-eslint/recommended
   - plugin:github/recommended
   - plugin:jest/recommended
+
+rules:
+  filenames/match-regex: off
