--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "ncc build --source-map --license licenses.txt",
-    "fix": "run-s fix:prettier fix:eslint fix:tsc",
-    "fix:eslint": "npm run lint:eslint -- --fix",
-    "fix:prettier": "npm run lint:prettier -- --write",
-    "fix:tsc": "npm run lint:tsc",
+    "fix": "run-s fix:*",
+    "fix:deno-lint": "deno lint --config deno.jsonc",
+    "fix:deno-fmt": "deno fmt --config deno.jsonc",
     "lint": "run-p -l -c --aggregate-output lint:*",
-    "lint:eslint": "eslint src",
-    "lint:prettier": "prettier --check .",
-    "lint:tsc": "tsc src/**.ts --noEmit",
+    "lint:deno-lint": "deno lint --config deno.jsonc",
+    "lint:deno-fmt": "deno fmt --check --config deno.jsonc",
     "test": "run-p -l -c --aggregate-output lint:* unit",
     "unit": "jest",
     "watch": "npm run build -- -w"
@@ -35,15 +33,9 @@
     "@actions/github": "^5.0.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
     "@vercel/ncc": "^0.33.1",
-    "eslint": "^8.6.0",
-    "eslint-plugin-github": "^4.3.5",
-    "eslint-plugin-jest": "^25.3.4",
     "jest": "^27.4.7",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.1",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   }
