--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "deno.enable": false,
+  "deno.enable": true,
   "deno.lint": true,
   "deno.unstable": true,
   "deno.config": "./deno.jsonc",
