--- a/package.json
+++ b/package.json
@@ -29,14 +29,9 @@
   },
   "homepage": "https://github.com/proudust/gh-describe#readme",
   "devDependencies": {
-    "@actions/core": "^1.6.0",
-    "@actions/github": "^5.0.0",
     "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.8",
-    "@vercel/ncc": "^0.33.1",
     "jest": "^27.4.7",
     "npm-run-all": "^4.1.5",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4"
+    "ts-jest": "^27.1.2"
   }
 }
