--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "`git describe --tags` in shallow clones on GitHub Actions.",
   "main": "src/index.ts",
   "scripts": {
-    "build": "ncc build --source-map --license licenses.txt",
+    "build": "deno run --allow-env --allow-net --allow-read --allow-run --allow-write src/actions_build.ts",
     "fix": "run-s fix:*",
     "fix:deno-lint": "deno lint --config deno.jsonc",
     "fix:deno-fmt": "deno fmt --config deno.jsonc",
