:wrench: Split workflow job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,12 +39,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
-      - name: Upload Build Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: gh-describe-canary
-          path: ./dist/gh-describe-*
-
       - name: Verify No Unstaged Changes
         run: |
           if [[ "$(git status --porcelain)" != "" ]]; then
@@ -55,6 +49,41 @@ jobs:
             echo "::error::Unstaged changes detected."
             exit 1
           fi
+
+  compile:
+    runs-on: ubuntu-latest
+    if: >
+      github.event_name == 'push' ||
+      github.event.pull_request.head.repo.full_name != github.repository
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Use Node.js 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: npm
+
+      - name: Use Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
+
+      - name: Restore Dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run compile
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: gh-describe-canary
+          path: ./dist/gh-describe-*
 
   test:
     runs-on: ubuntu-latest
@@ -76,6 +105,7 @@ jobs:
       github.event_name == 'release'
     needs:
       - build
+      - compile
       - test
 
     steps:
