--- a/deno.jsonc
+++ b/deno.jsonc
@@ -19,5 +19,14 @@
         "node_modules"
       ]
     }
+  },
+  "tasks": {
+    "build": "deno run --allow-env --allow-net --allow-read --allow-run --allow-write _build.ts",
+    "compile": "deno run --allow-env --allow-net --allow-read --allow-run --allow-write _compile.ts",
+    "run": "deno task start:deno",
+    "run:deno": "deno run --allow-run --unstable cli/main.ts",
+    "run:node": "deno task build && node dist/cli.js",
+    "test": "deno fmt --check & deno lint & deno task unit",
+    "unit": "deno test core"
   }
 }
