--- a/deno.jsonc
+++ b/deno.jsonc
@@ -23,7 +23,7 @@
   "tasks": {
     "build": "deno run --allow-env --allow-net --allow-read --allow-run --allow-write _build.ts",
     "compile": "deno run --allow-env --allow-net --allow-read --allow-run --allow-write _compile.ts",
-    "run": "deno task start:deno",
+    "run": "deno task run:deno",
     "run:deno": "deno run --allow-run --unstable cli/main.ts",
     "run:node": "deno task build && node dist/cli.js",
     "test": "deno fmt --check & deno lint & deno task unit",
